Fix/creation form calendar update (#176)
* fix(frontend): calendar issues color fix no-scrollbar

* fix(frontend): height adjust reward token list

* fix(frontend): fixes suggestions

* fix(frontend): time consistent height loading fix

* fix(frontend): lint fix

--- a/packages/frontend/src/components/create-campaign/form/rewards-step/reward-tokens-list/styles.module.css
+++ b/packages/frontend/src/components/create-campaign/form/rewards-step/reward-tokens-list/styles.module.css
@@ -1,5 +1,5 @@
 .root {
-    @apply h-96
+    @apply max-h-[22.5rem]
         w-full
         overflow-hidden;
 }
@@ -8,6 +8,7 @@
     @apply flex
         justify-between
         items-center
+        py-1
         px-4;
 }
 
